[package]
name = "bitops"
version = "0.1.0"
authors = ["Ross MacArthur <macarthur.ross@gmail.com>"]
edition = "2018"
description = "Miscellaneous bit operations for any Integer."
readme = "README.md"
homepage = "https://github.com/rossmacarthur/bitops"
repository = "https://github.com/rossmacarthur/bitops"
license = "MIT OR Apache-2.0"
keywords = ["bit", "flag", "integer", "mask"]

[dependencies]
num-integer = "0.1"
